GUID Link integration
